Implement node api endpoints for banks and persons
